[package]
name = "rope"
version = "0.2.0"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
edition = "2021"
description = "easy file transfer on same network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
if-addrs = "0.10.1"
indicatif = { version = "0.17.3", features = ["tokio"] }
mdns-sd = "0.7.3"
names = { version = "0.14.0", default-features = false }
tokio = { version = "1.28.1", features = ["full", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
