[package]
name = "rope"
version = "0.2.0"
description = "easy file transfer on same network"
repository = "https://github.com/rnbguy/rope"
readme = "README.md"
license = "AGPL-3.0"
keywords = ["mdns", "p2p", "network"]
categories = ["command-line-utilities"]
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
rust-version = "1.74.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
if-addrs = "0.11"
indicatif = { version = "0.17", features = ["tokio"] }
mdns-sd = "0.10"
names = { version = "0.14", default-features = false }
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
all = "warn"

# cargo = "warn"
# pedantic = "warn"
# restriction = "warn"
